[gd_scene load_steps=6 format=2]

[ext_resource path="res://Assets/Menu/Icons/larger.png" type="Texture" id=1]
[ext_resource path="res://Assets/Sounds/UI/Success.wav" type="AudioStream" id=2]
[ext_resource path="res://Assets/Menu/Icons/smaller.png" type="Texture" id=3]
[ext_resource path="res://Scenes/MainMenu/SettingsMenu/AudioSettings.gd" type="Script" id=4]
[ext_resource path="res://Scenes/MainMenu/SettingsMenu/GraphicsSettings.gd" type="Script" id=5]

[node name="SettingsMenu" type="PanelContainer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -300.0
margin_top = -200.0
margin_right = 300.0
margin_bottom = 200.0
rect_min_size = Vector2( 600, 400 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 20.0
margin_top = 20.0
margin_right = 580.0
margin_bottom = 380.0
custom_constants/separation = 50

[node name="Graphics" type="VBoxContainer" parent="VBoxContainer"]
margin_right = 560.0
margin_bottom = 72.0
size_flags_horizontal = 3
script = ExtResource( 5 )

[node name="Graphics" type="Label" parent="VBoxContainer/Graphics"]
margin_right = 560.0
margin_bottom = 32.0
text = "Graphics"

[node name="ToggleFullscreen" type="HBoxContainer" parent="VBoxContainer/Graphics"]
margin_top = 40.0
margin_right = 560.0
margin_bottom = 72.0

[node name="Label" type="Label" parent="VBoxContainer/Graphics/ToggleFullscreen"]
margin_right = 276.0
margin_bottom = 32.0
size_flags_horizontal = 3
text = "Fullscreen"

[node name="ToggleOn" type="TextureButton" parent="VBoxContainer/Graphics/ToggleFullscreen"]
margin_left = 284.0
margin_right = 560.0
margin_bottom = 32.0
size_flags_horizontal = 3
texture_normal = ExtResource( 1 )
texture_pressed = ExtResource( 1 )
texture_hover = ExtResource( 1 )
expand = true
stretch_mode = 5

[node name="ToggleOff" type="TextureButton" parent="VBoxContainer/Graphics/ToggleFullscreen"]
visible = false
margin_left = 260.0
margin_right = 386.0
margin_bottom = 14.0
size_flags_horizontal = 3
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 3 )
texture_hover = ExtResource( 3 )
expand = true
stretch_mode = 5

[node name="Audio" type="VBoxContainer" parent="VBoxContainer"]
margin_top = 122.0
margin_right = 560.0
margin_bottom = 274.0
size_flags_horizontal = 3
script = ExtResource( 4 )

[node name="Audio" type="Label" parent="VBoxContainer/Audio"]
margin_right = 560.0
margin_bottom = 32.0
text = "Audio"

[node name="Master" type="HBoxContainer" parent="VBoxContainer/Audio"]
margin_top = 40.0
margin_right = 560.0
margin_bottom = 72.0
custom_constants/separation = 10

[node name="Label" type="Label" parent="VBoxContainer/Audio/Master"]
margin_right = 275.0
margin_bottom = 32.0
size_flags_horizontal = 3
text = "Master"

[node name="MasterSlider" type="HSlider" parent="VBoxContainer/Audio/Master"]
margin_left = 285.0
margin_right = 560.0
margin_bottom = 16.0
size_flags_horizontal = 3
value = 50.0

[node name="MasterSample" type="AudioStreamPlayer" parent="VBoxContainer/Audio/Master"]
stream = ExtResource( 2 )

[node name="Sound" type="HBoxContainer" parent="VBoxContainer/Audio"]
margin_top = 80.0
margin_right = 560.0
margin_bottom = 112.0
custom_constants/separation = 10

[node name="Label" type="Label" parent="VBoxContainer/Audio/Sound"]
margin_right = 275.0
margin_bottom = 32.0
size_flags_horizontal = 3
text = "Sound"

[node name="SoundSlider" type="HSlider" parent="VBoxContainer/Audio/Sound"]
margin_left = 285.0
margin_right = 560.0
margin_bottom = 16.0
size_flags_horizontal = 3
value = 50.0

[node name="SoundSample" type="AudioStreamPlayer" parent="VBoxContainer/Audio/Sound"]
stream = ExtResource( 2 )
bus = "Sound"

[node name="Music" type="HBoxContainer" parent="VBoxContainer/Audio"]
margin_top = 120.0
margin_right = 560.0
margin_bottom = 152.0
custom_constants/separation = 10

[node name="Label" type="Label" parent="VBoxContainer/Audio/Music"]
margin_right = 275.0
margin_bottom = 32.0
size_flags_horizontal = 3
text = "Music"

[node name="MusicSlider" type="HSlider" parent="VBoxContainer/Audio/Music"]
margin_left = 285.0
margin_right = 560.0
margin_bottom = 16.0
size_flags_horizontal = 3
value = 50.0

[node name="MusicSample" type="AudioStreamPlayer" parent="VBoxContainer/Audio/Music"]
stream = ExtResource( 2 )
bus = "Music"
[connection signal="value_changed" from="VBoxContainer/Audio/Master/MasterSlider" to="VBoxContainer/Audio" method="_on_MasterSlider_value_changed"]
[connection signal="value_changed" from="VBoxContainer/Audio/Sound/SoundSlider" to="VBoxContainer/Audio" method="_on_SoundSlider_value_changed"]
[connection signal="value_changed" from="VBoxContainer/Audio/Music/MusicSlider" to="VBoxContainer/Audio" method="_on_MusicSlider_value_changed"]
